Update list of properties whitelisted for first-letter

CSS Pseudo 4 [1] expands the list of properties that can apply to
::first-letter when compared to CSS Selectors 3. Our list was based
primarily off of CSS Selectors 3; update per Pseudo 4. Also whitelist
variables within ::first-letter.

[1]: https://drafts.csswg.org/css-pseudo-4/#first-letter-styling

Bug: 660026, 715661
Change-Id: I950c7881506f8c36c3b917aff0ed2f1709d194ce