third_party/WebKit/Source/core/css/resolver/StyleResolver.cpp
@@ -1304,7 +1304,7 @@ static inline bool IsValidCueStyleProperty(CSSPropertyID id) {
 static inline bool IsValidFirstLetterStyleProperty(CSSPropertyID id) {
   switch (id) {
     // Valid ::first-letter properties listed in spec:
-    // http://www.w3.org/TR/css3-selectors/#application-in-css
+    // https://drafts.csswg.org/css-pseudo-4/#first-letter-styling
     case CSSPropertyBackgroundAttachment:
     case CSSPropertyBackgroundBlendMode:
     case CSSPropertyBackgroundClip:
@@ -1339,12 +1339,14 @@ static inline bool IsValidFirstLetterStyleProperty(CSSPropertyID id) {
     case CSSPropertyBorderTopRightRadius:
     case CSSPropertyBorderTopStyle:
     case CSSPropertyBorderTopWidth:
+    case CSSPropertyBoxShadow:
     case CSSPropertyColor:
     case CSSPropertyFloat:
-    case CSSPropertyFont:
     case CSSPropertyFontFamily:
+    case CSSPropertyFontFeatureSettings:
     case CSSPropertyFontKerning:
     case CSSPropertyFontSize:
+    case CSSPropertyFontSizeAdjust:
     case CSSPropertyFontStretch:
     case CSSPropertyFontStyle:
     case CSSPropertyFontVariant:
@@ -1352,6 +1354,7 @@ static inline bool IsValidFirstLetterStyleProperty(CSSPropertyID id) {
     case CSSPropertyFontVariantLigatures:
     case CSSPropertyFontVariantNumeric:
     case CSSPropertyFontVariantEastAsian:
+    case CSSPropertyFontVariationSettings:
     case CSSPropertyFontWeight:
     case CSSPropertyLetterSpacing:
     case CSSPropertyLineHeight:
@@ -1359,11 +1362,19 @@ static inline bool IsValidFirstLetterStyleProperty(CSSPropertyID id) {
     case CSSPropertyMarginLeft:
     case CSSPropertyMarginRight:
     case CSSPropertyMarginTop:
+    case CSSPropertyOpacity:
     case CSSPropertyPaddingBottom:
     case CSSPropertyPaddingLeft:
     case CSSPropertyPaddingRight:
     case CSSPropertyPaddingTop:
+    case CSSPropertyTextDecorationColor:
+    case CSSPropertyTextDecorationLine:
+    case CSSPropertyTextDecorationStyle:
+    case CSSPropertyTextDecorationSkipInk:
+    case CSSPropertyTextJustify:
+    case CSSPropertyTextShadow:
     case CSSPropertyTextTransform:
+    case CSSPropertyTextUnderlinePosition:
     case CSSPropertyVerticalAlign:
     case CSSPropertyWebkitBorderAfter:
     case CSSPropertyWebkitBorderAfterColor:
@@ -1396,20 +1407,10 @@ static inline bool IsValidFirstLetterStyleProperty(CSSPropertyID id) {
     case CSSPropertyWebkitMarginTopCollapse:
     case CSSPropertyWordSpacing:
       return true;
-    case CSSPropertyFontVariationSettings:
-      return true;
-    case CSSPropertyTextDecorationColor:
-    case CSSPropertyTextDecorationLine:
-    case CSSPropertyTextDecorationStyle:
-    case CSSPropertyTextDecorationSkipInk:
-      return true;
 
-    // text-shadow added in text decoration spec:
-    // http://www.w3.org/TR/css-text-decor-3/#text-shadow-property
-    case CSSPropertyTextShadow:
-    // box-shadox added in CSS3 backgrounds spec:
-    // http://www.w3.org/TR/css3-background/#placement
-    case CSSPropertyBoxShadow:
+    // Not directly specified in spec, but variables should be supported nearly
+    // anywhere.
+    case CSSPropertyVariable:
     // Properties that we currently support outside of spec.
     case CSSPropertyVisibility:
       return true;
